logs/error-2019-12-10-16.log
2019-12-10T14:09:59.957Z  error: uncaughtException: m is not defined
ReferenceError: m is not defined
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/routs/user.js:1:63)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:20)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
2019-12-10T14:14:45.530Z  error: uncaughtException: authenticationMiddleware is not defined
ReferenceError: authenticationMiddleware is not defined
    at module.exports.router (/Users/smaksimenko/express/web_api/routs/user.js:2:10)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:55)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/server.js:1:75)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
2019-12-10T14:15:00.591Z  error: uncaughtException: authenticationMiddleware is not defined
ReferenceError: authenticationMiddleware is not defined
    at module.exports.router (/Users/smaksimenko/express/web_api/routs/user.js:2:10)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:55)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/server.js:1:75)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
2019-12-10T14:15:09.077Z  error: uncaughtException: m is not defined
ReferenceError: m is not defined
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/routs/user.js:1:63)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:20)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
2019-12-10T14:44:05.885Z  error: uncaughtException: Unexpected token .
/Users/smaksimenko/express/web_api/routs/user.js:8
      const userEntity = User.build({req.body);
                                        ^

SyntaxError: Unexpected token .
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:20)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
2019-12-10T14:44:32.136Z  error: uncaughtException: Unexpected token .
/Users/smaksimenko/express/web_api/routs/user.js:8
      const userEntity = User.build({req.body);
                                        ^

SyntaxError: Unexpected token .
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at fs.readdirSync.forEach.file (/Users/smaksimenko/express/web_api/index.js:10:20)
    at Array.forEach (<anonymous>)
    at Object.<anonymous> (/Users/smaksimenko/express/web_api/index.js:10:4)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/Users/smaksimenko/express/app.js:17:16)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
